Hola Mundo versión con javascript

--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
   <title>Hola Mundo</title>
 </head>
 <body>
+  <script>
+    document.write("<p>Hola Mundo</p>");
+  </script>
+  <!--
   <p>Hola Mundo</p>
+-->
 </body>
 </html>
