--- a/index.html
+++ b/index.html
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="utf-8">
   <title>Hola Mundo</title>
+  <script src="js/rutina.js" type="text/javascript"></script>
 </head>
 <body>
-  <script>
-    document.write("<p>Hola Mundo</p>");
-  </script>
-  <!--
-  <p>Hola Mundo</p>
--->
+
 </body>
 </html>
