--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
   <meta charset="utf-8">
   <title>Hola Mundo</title>
   <script src="js/rutina.js" type="text/javascript"></script>
 </head>
 <body>
+  <header>
 
+  </header>
 </body>
 </html>
